@startuml

title __PAGES's Class Diagram__\n

  namespace model.data {
    namespace pages {
      class model.data.pages.Item {
          - description : String
          - name : String
          + Item()
          + Item()
          + getDescription()
          + getTitle()
      }
    }
  }
  

  namespace model.data {
    namespace pages {
      class model.data.pages.Property {
          - description : String
          - title : String
          + Property()
          + Property()
          + getDescription()
          + getTitle()
      }
    }
  }
  

  model.data.pages.Item -up-|> model.data.Datum
  model.data.pages.Property -up-|> model.data.Datum


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
